--- a/parkingapp/templates/dash_full.html
+++ b/parkingapp/templates/dash_full.html
@@ -6,13 +6,13 @@
                 <div class="container-fluid mt-3">
                     <div class="d-sm-flex justify-content-between align-items-center mb-4">
                         <h3 class="text-dark mb-0">Наполняемость</h3>
-                        <form method="post">
+                        <form method="POST">
                             {% csrf_token %}
                             <div class="input-group" style="max-width: 500px;">
-                                <input type="number" class="form-control btn btn-sm btn-outline-secondary" placeholder="id парковки" name="id">
-                                <input type="date" class="form-control btn btn-sm btn-outline-secondary" value="{{ start }}" name="period_start">
-                                <input type="date" class="form-control btn btn-sm btn-outline-secondary" value="{{ end }}" name="period_end">
-                                <button type="submit" class="btn btn-sm btn-outline-secondary">Получить данные</button>
+                                <input type="number" class="form-control radl border-secondary" style="background: none;" placeholder="id парковки" name="id">
+                                <input type="date" class="form-control  border-secondary" style="background: none;" value="2023-12-09" name="period_start">
+                                <input type="date" class="form-control  border-secondary" style="background: none;" value="2023-12-10" name="period_end">
+                                <button type="submit" class="btn btn-sm btn-outline-secondary radr">Получить данные</button>
                             </div>
                         </form>
                     </div>
@@ -111,8 +111,16 @@
                                             },
                                             options: {
                                             scales: {
+                                                x: {
+                                                grid: {
+                                                    display: false
+                                                }
+                                                },
                                                 y: {
-                                                beginAtZero: true
+                                                    beginAtZero: true,
+                                                grid: {
+                                                    display: false
+                                                }
                                                 }
                                             }
                                             }
