--- a/parkingapp/templates/base.html
+++ b/parkingapp/templates/base.html
@@ -21,7 +21,7 @@
             <li class="nav-item"><a href="sign" class="nav-link {% block active_sign %}{% endblock %}">Регистрация</a></li>
             <li class="nav-item"><a href="enter" class="nav-link {% block active_enter %}{% endblock %}">Вход</a></li>
             {% else %}
-            <li class="nav-item"><a href="/" class="nav-link">Выход</a></li>
+            <li class="nav-item"><a href="logout" class="nav-link">Выход</a></li>
             {% endif %}
           </ul>
         </header>
