--- a/parkingapp/templates/dash_coupon.html
+++ b/parkingapp/templates/dash_coupon.html
@@ -7,12 +7,12 @@
             <div class="d-sm-flex justify-content-between align-items-center mb-4">
                 <h3 class="text-dark mb-0">Льготные места</h3>
                 <form method="POST">
+                    {% csrf_token %}
                     <div class="input-group" style="max-width: 500px;">
-                        {% csrf_token %}
-                        <input type="number" class="form-control btn btn-sm btn-outline-secondary" name="id" placeholder="id парковки">
-                        <input type="date" class="form-control btn btn-sm btn-outline-secondary" value="{{ start }}" name="period_start">
-                        <input type="date" class="form-control btn btn-sm btn-outline-secondary" value="{{ end }}" name="period_end">
-                        <button type="submit" class="btn btn-sm btn-outline-secondary">Получить данные</button>
+                        <input type="number" class="form-control radl border-secondary" style="background: none;" placeholder="id парковки" name="id">
+                        <input type="date" class="form-control  border-secondary" style="background: none;" value="2023-12-09" name="period_start">
+                        <input type="date" class="form-control  border-secondary" style="background: none;" value="2023-12-10" name="period_end">
+                        <button type="submit" class="btn btn-sm btn-outline-secondary radr">Получить данные</button>
                     </div>
                 </form>
             </div>
@@ -111,9 +111,17 @@
                                     },
                                     options: {
                                     scales: {
-                                        y: {
-                                        beginAtZero: true
-                                        }
+                                        x: {
+                                                grid: {
+                                                    display: false
+                                                }
+                                                },
+                                                y: {
+                                                    beginAtZero: true,
+                                                grid: {
+                                                    display: false
+                                                }
+                                                }
                                     }
                                     }
                                 });
