--- a/parkingapp/templates/addparking.html
+++ b/parkingapp/templates/addparking.html
@@ -19,7 +19,7 @@
               <label for="a">Количество мест</label>
             </div>
             <div class="form-floating mb-3">
-              <input type="number" class="form-control rounded-4" id="a" placeholder="" name="max_parking_spaces">
+              <input type="number" class="form-control rounded-4" id="a" placeholder="" name="price">
               <label for="a">Цена за час</label>
             </div>
             <button class="w-100 mb-2 btn btn-lg rounded-4 btn-primary" type="submit">Добавить</button>
