ЯРЕМЧУК ПИДАРАС ОЙ НЕТ ОН ХОРОШИЙ

--- a/parkingapp/templates/dash_fin.html
+++ b/parkingapp/templates/dash_fin.html
@@ -11,7 +11,7 @@
                     <div class="input-group" style="max-width: 500px;">
                         <input type="date" class="form-control  border-secondary radl" style="background: none;" value="2023-12-09" name="period_start">
                         <input type="date" class="form-control  border-secondary" style="background: none;" value="2023-12-10" name="period_end">
-                        <button type="submit" class="btn btn-sm btn-outline-secondary radr">Получить данные</button>
+                        <button type="submit" class="btn btn-sm btn-primary radr">Получить данные</button>
                     </div>
                 </form>
             </div>
