--- a/parkingapp/templates/base.html
+++ b/parkingapp/templates/base.html
@@ -16,12 +16,12 @@
             <span class="fs-2">ЕСП</span>
           </a>
           <ul class="nav nav-pills">
-            <li class="nav-item"><a href="/" class="nav-link {% block active_parking %}{% endblock %}" aria-current="page">Парковка</a></li>
+            <li class="nav-item"><a href="/" class="nav-link rounded-4 {% block active_parking %}{% endblock %}" aria-current="page">Парковка</a></li>
             {% if not user.is_authenticated %}
-            <li class="nav-item"><a href="sign" class="nav-link {% block active_sign %}{% endblock %}">Регистрация</a></li>
-            <li class="nav-item"><a href="enter" class="nav-link {% block active_enter %}{% endblock %}">Вход</a></li>
+            <li class="nav-item"><a href="sign" class="nav-link rounded-4 {% block active_sign %}{% endblock %}">Регистрация</a></li>
+            <li class="nav-item"><a href="enter" class="nav-link rounded-4 {% block active_enter %}{% endblock %}">Вход</a></li>
             {% else %}
-            <li class="nav-item"><a href="logout" class="nav-link">Выход</a></li>
+            <li class="nav-item"><a href="logout" class="nav-link rounded-4">Выход</a></li>
             {% endif %}
           </ul>
         </header>
