--- a/parkingapp/templates/dash_coupon.html
+++ b/parkingapp/templates/dash_coupon.html
@@ -9,10 +9,10 @@
                 <form method="POST">
                     {% csrf_token %}
                     <div class="input-group" style="max-width: 500px;">
-                        <input type="number" class="form-control radl border-secondary" style="background: none;" placeholder="id парковки" name="id">
+                        <input type="number" class="form-control radl border-secondary" value="{{ defid }}" style="background: none;" placeholder="id парковки" name="id">
                         <input type="date" class="form-control  border-secondary" style="background: none;" value="2023-12-09" name="period_start">
                         <input type="date" class="form-control  border-secondary" style="background: none;" value="2023-12-10" name="period_end">
-                        <button type="submit" class="btn btn-sm btn-outline-secondary radr">Получить данные</button>
+                        <button type="submit" class="btn btn-sm btn-primary radr">Получить данные</button>
                     </div>
                 </form>
             </div>
@@ -39,28 +39,6 @@
                                     <div class="text-dark fw-bold h5 mb-0"><span>{{average_time}}</span></div>
                                 </div>
                                 <div class="col-auto"><i class="fas fa-dollar-sign fa-2x text-gray-300"></i></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-auto col-md-6 col-xl-4 mb-4">
-                    <div class="card shadow border-start-info py-2">
-                        <div class="card-body">
-                            <div class="row align-items-center no-gutters">
-                                <div class="col me-2">
-                                    <div class="text-uppercase text-primary fw-bold text-xs mb-1"><span>наполненость льготных мест</span></div>
-                                    <div class="row g-0 align-items-center">
-                                        <div class="col-auto">
-                                            <div class="text-dark fw-bold h5 mb-0 me-3"><span>50%</span></div>
-                                        </div>
-                                        <div class="col">
-                                            <div class="progress progress-sm">
-                                                <div class="progress-bar bg-primary" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;"><span class="visually-hidden">50%</span></div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-auto"><i class="fas fa-clipboard-list fa-2x text-gray-300"></i></div>
                             </div>
                         </div>
                     </div>
