--- a/parkingapp/templates/addparking.html
+++ b/parkingapp/templates/addparking.html
@@ -11,15 +11,15 @@
           <form method="post">
             {% csrf_token %}
             <div class="form-floating mb-3">
-              <input type="text" class="form-control rounded-4" id="a" placeholder="" name="address">
+              {{form.address}}
               <label for="a">Адрес</label>
             </div>
             <div class="form-floating mb-3">
-              <input type="text" class="form-control rounded-4" id="a" placeholder="" name="max_parking_spaces">
+              {{form.max_parking_spaces}}
               <label for="a">Количество мест</label>
             </div>
             <div class="form-floating mb-3">
-              <input type="number" class="form-control rounded-4" id="a" placeholder="" name="price">
+              {{form.price}}
               <label for="a">Цена за час</label>
             </div>
             <button class="w-100 mb-2 btn btn-lg rounded-4 btn-primary" type="submit">Добавить</button>
