--- a/parkingapp/templates/dash_parks.html
+++ b/parkingapp/templates/dash_parks.html
@@ -15,7 +15,7 @@
                         <div class="d-sm-flex card-header py-3 justify-content-between align-items-center">
                             <p class="text-primary m-0 fw-bold">Парковки</p>
                             <div>
-                                <a class="btn btn-primary rounded-pill mx-1 my-1" href="addparking" type="button">Новая парковка</a>
+                                <a class="btn btn-primary rounded-pill mx-1 my-1" href="{% url 'parkingapp:addparking' %}" type="button">Новая парковка</a>
                             </div>
                         </div>
                         <div class="card-body">
