--- a/parkingapp/templates/dash_users.html
+++ b/parkingapp/templates/dash_users.html
@@ -15,8 +15,8 @@
                         <div class="d-sm-flex card-header py-3 justify-content-between align-items-center">
                             <p class="text-primary m-0 fw-bold">Пользователи</p>
                             <div>
-                                <a class="btn btn-primary rounded-pill mx-1 my-1" href="signadmin" type="button">Новый админ</a>
-                                <a class="btn btn-primary rounded-pill mx-1 my-1" href="signcoupon" type="button">Новый партнер</a>
+                                <a class="btn btn-primary rounded-pill mx-1 my-1" href="{% url 'parkingapp:signadmin' %}" type="button">Новый админ</a>
+                                <a class="btn btn-primary rounded-pill mx-1 my-1" href="{% url 'parkingapp:signcoupon' %}" type="button">Новый партнер</a>
                             </div>
                         </div>
                         <div class="card-body">
