--- a/parkingapp/templates/base.html
+++ b/parkingapp/templates/base.html
@@ -5,23 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://api-maps.yandex.ru/2.1.47/?lang=ru_RU&amp;apikey=fe7387f0-4485-4341-91bd-7b6427f658d7" type="text/javascript"></script>
-    <title>{% block title %}{% endblock %}</title>
+    <title>{{ title }}</title>
 </head>
 <body class="bg-body-tertiary">
-  <form method="post" action="enter">
+  <form method="post" action="{% url 'parkingapp:enter' %}">
 <body style="overflow-x: hidden; width: 100vw;" {% block theme %}{% endblock %}>
     <div class="container">
         <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-          <a href="esp" class="d-flex ms-2 ms-md-0 align-items-center mb-md-0 me-auto link-body-emphasis text-decoration-none nor">
+          <a href="{% url 'parkingapp:esp' %}" class="d-flex ms-2 ms-md-0 align-items-center mb-md-0 me-auto link-body-emphasis text-decoration-none nor">
             <span class="fs-2">ЕСП</span>
           </a>
           <ul class="nav nav-pills">
-            <li class="nav-item"><a href="/" class="nav-link rounded-4 {% block active_parking %}{% endblock %}" aria-current="page">Парковка</a></li>
+            <li class="nav-item"><a href="{% url 'parkingapp:index' %}" class="nav-link rounded-4 {% block active_parking %}{% endblock %}" aria-current="page">Парковка</a></li>
             {% if not user.is_authenticated %}
-            <li class="nav-item"><a href="sign" class="nav-link rounded-4 {% block active_sign %}{% endblock %}">Регистрация</a></li>
-            <li class="nav-item"><a href="enter" class="nav-link rounded-4 {% block active_enter %}{% endblock %}">Вход</a></li>
+            <li class="nav-item"><a href="{% url 'parkingapp:sign' %}" class="nav-link rounded-4 {% block active_sign %}{% endblock %}">Регистрация</a></li>
+            <li class="nav-item"><a href="{% url 'parkingapp:enter' %}" class="nav-link rounded-4 {% block active_enter %}{% endblock %}">Вход</a></li>
             {% else %}
-            <li class="nav-item"><a href="logout" class="nav-link rounded-4">Выход</a></li>
+            <li class="nav-item"><a href="{% url 'parkingapp:logout' %}" class="nav-link rounded-4">Выход</a></li>
             {% endif %}
           </ul>
         </header>
@@ -32,13 +32,13 @@
       <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
         <p class="col-md-4 mb-0 text-body-secondary">© 2023 бронепоезд</p>
 
-        <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+        <a href="{% url 'parkingapp:index' %}" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
           <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
         </a>
 
         <ul class="nav col-md-4 justify-content-end">
-          <li class="nav-item"><a href="dash_full" class="nav-link px-2 text-body-secondary">Администраторам</a></li>
-          <li class="nav-item"><a href="coupon" class="nav-link px-2 text-body-secondary">Партнерам</a></li>
+          <li class="nav-item"><a href="{% url 'parkingapp:dash_full' %}" class="nav-link px-2 text-body-secondary">Администраторам</a></li>
+          <li class="nav-item"><a href="{% url 'parkingapp:coupon' %}" class="nav-link px-2 text-body-secondary">Партнерам</a></li>
         </ul>
       </footer>
     </div>
