--- a/parkingapp/templates/endparking.html
+++ b/parkingapp/templates/endparking.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
+
+
 {% block content %}
 <div class="modal modal-sheet pb-5 position-static d-block">
   <div class="modal-dialog" role="document">
@@ -41,7 +43,7 @@
             </div>
           </li>
         </ul>
-        <a href="/" class="btn btn-lg rounded-4 btn-primary mt-5 w-100" data-bs-dismiss="modal">Вернуться на главную</a>
+        <a href="{% url 'parkingapp:index' %}" class="btn btn-lg rounded-4 btn-primary mt-5 w-100" data-bs-dismiss="modal">Вернуться на главную</a>
       </div>
     </div>
   </div>
