--- a/parkingapp/templates/index.html
+++ b/parkingapp/templates/index.html
@@ -66,7 +66,7 @@
       <form class="p-4 p-md-5 border bg-white rounded-4 shadow" method="post">
         {% csrf_token %}
         <div class="form-floating mb-3">
-          {{form.pk}}
+          {{form.parking_id}}
           <label for="floatingInput">ID парковки</label>
         </div>
         <button name="create_park" class="w-100 btn btn-lg btn-primary rounded-4" type="submit">Начать парковку</button>
