--- a/parkingapp/templates/base.html
+++ b/parkingapp/templates/base.html
@@ -21,6 +21,7 @@
             <li class="nav-item"><a href="{% url 'parkingapp:sign' %}" class="nav-link rounded-4 {% block active_sign %}{% endblock %}">Регистрация</a></li>
             <li class="nav-item"><a href="{% url 'parkingapp:enter' %}" class="nav-link rounded-4 {% block active_enter %}{% endblock %}">Вход</a></li>
             {% else %}
+            <li class="nav-item"><a href="{% url 'parkingapp:profile' %}" class="nav-link rounded-4">Профиль</a></li>
             <li class="nav-item"><a href="{% url 'parkingapp:logout' %}" class="nav-link rounded-4">Выход</a></li>
             {% endif %}
           </ul>
