--- a/parkingapp/templates/profile.html
+++ b/parkingapp/templates/profile.html
@@ -1,21 +1,16 @@
 {% extends 'base.html' %}
 
 
-{% block active_sign %}
-  active
-{% endblock %}
-
-
 {% block content %}
-<div class="modal modal-sheet position-static d-block p-4 py-md-5" tabindex="-1" role="dialog" id="modalSignin">
+<div class="modal modal-sheet position-static d-block p-4 py-md-1" tabindex="-1" role="dialog" id="modalSignin">
     <div class="modal-dialog" role="document">
       <div class="modal-content rounded-4 shadow border">
         <div class="modal-header p-5 pb-4 border-bottom-0">
-          <h1 class="fw-bold mb-0 fs-2">Регистрация</h1>
+          <h1 class="fw-bold mb-0 fs-2">Профиль</h1>
         </div>
   
         <div class="modal-body p-5 pt-0 rounded-4">
-          <form action="{% url 'parkingapp:sign' %}" method="post">
+          <form action="{% url 'parkingapp:profile' %}" method="post">
             {% csrf_token %}
             <div class="form-floating mb-3">
               {{ form.first_name }}
@@ -33,19 +28,15 @@
               {{ form.email }}
               <label for="{{ form.email.id_for_label }}">Почта</label>         
             </div>
-            <div class="form-floating mb-3">
-              {{ form.password1 }}
-              <label for="{{ form.password1.id_for_label }}">Пароль</label>
-            </div>
-            <div class="form-floating mb-3">
-              {{ form.password2 }}
-              <label for="{{ form.password2.id_for_label }}">Подтвердите пароль</label>
-            </div>
             
-            <button class="w-100 mb-2 btn btn-lg rounded-4 btn-primary" type="submit">Зарегистрироваться</button>
+            <button class="w-100 mb-2 btn btn-lg rounded-4 btn-primary" type="submit">Сохранить</button>
             <small class="text-danger">{{ form.errors }}</small>
+            <hr>
+            <a href="{% url 'parkingapp:user_card' %}" class="w-100 mb-2 btn btn-lg rounded-4 btn-primary" type="submit">Изменить данные карты</a>
+
           </form>
         </div>
+
       </div>
     </div>
 </div>
