--- a/parkingapp/templates/addparking.html
+++ b/parkingapp/templates/addparking.html
@@ -15,8 +15,8 @@
               <label for="{{ form.address.id_for_label }}">Адрес</label>
             </div>
             <div class="form-floating mb-3">
-              {{form.max_parking_spaces}}
-              <label for="{{ form.max_parking_spaces.id_for_label }}">Количество мест</label>
+              {{form.max_parking_lots}}
+              <label for="{{ form.max_parking_lots.id_for_label }}">Количество мест</label>
             </div>
             <div class="form-floating mb-3">
               {{form.price}}
